--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ cache:
 python:
   - "3.6"
 install:
+  - "pip install coveralls"
   - "pip install -r requirements.txt"
 script:
-  - "nosetests --with-cover --cover-package=run"
+  - "nosetests --with-cover"
+after_success:
+  - "coveralls"
