--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install:
   - "pip install coveralls"
   - "pip install -r requirements.txt"
 script:
+  - "prospector"
   - "nosetests --with-cover"
 after_success:
   - "coveralls"
