--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,28 @@
 cover/
 
+### serverless ###
+
+# Distribution / packaging
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Serverless directories
+.serverless
+
 ### gitignore/Vim.gitignore ###
 
 # Swap
