--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,30 @@
+### pytest ###
+**/.pytest_cache
+
 cover/
+
+### serverless ###
+
+# Distribution / packaging
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Serverless directories
+.serverless
 
 ### gitignore/Vim.gitignore ###
 
