Resolve deployment niggles

--- a/serverless.yml
+++ b/serverless.yml
@@ -25,6 +25,6 @@ functions:
   roll:
     events:
       - http:
-          path: roll  
+          path: roll
           method: post
-    handler: handler.roll
+    handler: src/handler.roll
