Scope pipenv check to production dependencies
Works around build failures caused by https://github.com/yaml/pyyaml/issues/207 until a safe, stable release lands.

Signed-off-by: Brendan Devenney <brendan@devenney.io>

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,19 @@ cache:
 python:
   - "3.6"
 install:
+  # Python Dependencies
   - "pip install pipenv"
-  - "pipenv install --dev"
-  - "pipenv run yarn install"
-script:
+  # Production Dependencies
+  - "pipenv install"
+  # Package Safety Check
   - "pipenv check"
+  # Development Dependencies
+  - "pipenv install --dev"
+script:
+  # Static Code Analysis
   - "pipenv run prospector"
+  # Unit Tests
   - "pipenv run nose2 --with-coverage"
 after_success:
+  # Submit Coverage
   - "pipenv run coveralls"
